--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,8 @@
 <resources>
     <string name="app_name">SeaFight</string>
     <string name="action_settings">Settings</string>
+    <string name="menu_start_game">Start</string>
+    <string name="menu_settings_game">Settings</string>
+    <string name="menu_about">About</string>
+    <string name="menu_exit">Exit</string>
 </resources>
